@@ -17,7 +17,7 @@ public class ClassLoaderTest
 		Class<?> klass = loader.loadClass("org.se.lab.HelloWorld");
 		Assert.assertEquals("org.se.lab.HelloWorld", klass.getName());
 		Method m = klass.getDeclaredMethod("sayHello");
-		Object obj = klass.newInstance();
+		Object obj = klass.getDeclaredConstructor().newInstance();
 		m.invoke(obj);		
 	}
 }
